@@ -1,3 +1,12 @@
+2001-11-15  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* src/jacl/tcl/lang/ExecCmd.java (cmdProc): If an
+	exec'ed subprocess exits with a non-zero status
+	set the error code to a three value list like
+	{CHILDSTATUS PID NUMBER}.
+	* tests/inprogress/ExecCmd.test: Test error code
+	after a call to the exec command.
+
 2001-06-03  Mo DeJong  <mdejong@redhat.com>
 
 	* tests/tcl/interp.test: Add interp-32.1, it checks
